# WatVisionRevival

./: .dockerignore  .gitignore  Dockerfile  README.md  build-and-publish.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_with_ssl.py  test.py
.github/workflows/: main_watvision.yml
backend/: .env.example  app.js  app.py  matching_service.py  package-lock.json  package.json  speech_service.py  test_data.json  test_data_screen.json  test_data_video.json  test_data_walmart.json  vision-manager.js  vision_instance.py  vision_manager.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.js  App.vue  imageFunctions.js  main.js
frontend/src/components/: DebugShared.js  WatVisionDebugWrapper.js
frontend/src/components/common/: ImageResult.vue  MultiInputImages.vue
frontend/src/hooks/: useVideoProcessing.js  useWatVision.js
frontend/src/js/: speechStreaming.js  watvision.js
frontend/src/pages/: About.js  Debug.js  DebugCamera.js  DebugVideo.js  Home.js
frontend/src/router/: index.js
frontend/src/store/: input.js  results.js  worker.js
frontend/src/views/: AboutView.vue  CameraView.vue  HomeView.vue  MatchView.vue
public/js/: imgalign.worker.js
src/: App.vue  imageFunctions.js  main.js
src/components/common/: ActionBar.vue  ActionBar2.vue  ImageResult.vue  InputImages.vue
src/components/layout/: ViewSpacer.vue
src/components/navigation/: Navbar.vue
src/components/settings/: MainSettings.vue
src/router/: index.js
src/store/: input.js  store.js
src/utilities/: ImageDataConversion.js
src/views/: AboutView.vue  HomeView.vue
src/workers/: WorkerClient.js
