[project]
name = "watvisionrevival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-vision-computervision>=0.9.1",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "kornia>=0.8.1",
    "matplotlib>=3.10.3",
    "mediapipe>=0.10.21",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "transformers>=4.52.3",
]
