[project]
name = "watvisionrevival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-cognitiveservices-vision-computervision>=0.9.1",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.13",
    "mediapipe>=0.10.14",
    "numpy>=2.3.0",
    "openai[realtime]>=1.88.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
]
